--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,4 @@ crashlytics-build.properties
 /Assets/UnityChan
 /Assets/Resources
 /Assets/TextMesh Pro
+Assets/Avatar_Elysia_C2_MC_Island_Generic+Anim.fbx.meta
